# nano-llm-infer

./: README.md  llm_engine.py  main.py  main_cpu.py  main_dist.py  main_mchip.py  model.py  model_runner.py  pyproject.toml  rotary_embedding.py
models/apple/: qwen3dense.py
models/cpu/: qwen3dense.py
models/npu/: qwen3dense.py  utils.py
