[project]
name = "qwen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dacite>=1.9.2",
    "numpy>=2.3.2",
    "safetensors>=0.6.2",
    "tokenizer>=3.4.5",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
]
